--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@tinymce/tinymce-react": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quiz-component": "^0.8.1",
     "react-router-dom": "^6.22.3",
     "react-simple-star-rating": "^5.1.7"
   },
