--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "@smastrom/react-rating": "^1.5.0",
     "@tinymce/tinymce-react": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-quiz-component": "^0.8.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^10.0.5",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
